--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ a:active {
                 <video class="page4video" autoplay loop muted>
             <source  src="../audio,picture/salaar.mp4"> 
                 </video>
-               <img class="page4laptop" src="../audio,picture/device-pile-in.png">
+               <img class="page4laptop" src="device-pile-in.png">
         </div>   
         <hr style="background-color: gray; height: 7.5px; opacity: 0.3; margin-top:-50px;">  
     </section>    
