--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ a:active {
                 <option value="1">korean</option>
                 <option value="1">Mandarin</option>
               </select> 
-              <form action="./netflixsignin.html">
+              <form action="./index2.html">
              <button type="submit" class="sign">Sign In</button>
          </div>   
     </form>
