--- a/index2.html
+++ b/index2.html
@@ -276,7 +276,7 @@ a:active {
          <h3>Wellcome back!</h3>
          <h1>Laughter. Tears. Thrills. Find it all on <br> Netflix.</h1>
          <h3>Endless entertainment starts at just &#8377;149. Cancel anytime.</h3>
-        <form action="./netflixhomepage.html"  method="get">
+        <form action="./index1.html"  method="get">
                     <label for="mail"></label><br>
         <input type="email" id="mail" name="mail" placeholder="mail" required>
         <input class="top" type="submit" value="Get Started >">
@@ -322,7 +322,7 @@ a:active {
             <source  src="../audio,picture/salaar.mp4">
             </source>   
         </video>
-        <img class="page4laptop" src="../audio,picture/device-pile-in.png">
+        <img class="page4laptop" src="./device-pile-in.png">
         </div>   
         <hr style="background-color: gray; height: 7.5px; opacity: 0.3; margin-top:-50px;">  
     </section>    
